--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "rxjs": "^6.0.0",
+    "shabdawali": "^2.2.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
